[package]
name = "project_8099"
version = "0.1.0"
edition = "2021"
default-run = "disguise_service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
actix-rt = "2.6.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.81"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.5.10", default_features = false, features = [
    "mysql",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }

[[bin]]
name = "disguise_service"